--- a/pub/index.html
+++ b/pub/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>blr</title>
+  <title>Flip Cards</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,900,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="math.css">
