--- a/src/pub/index.html
+++ b/src/pub/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="react.min.js"></script>
-  <script src="math.js"></script>
+  <script src="react.js"></script>
+  <script src="JSXTransformer.js"></script>
+  <script type="text/jsx" src="math.js"></script>
 </body>
 </html>
